添加插件：player_ip_logger

--- a/footer.html
+++ b/footer.html
@@ -33,6 +33,11 @@
                                 PF-webui
                             </a>
                         </li>
+                        <li>
+                            <a href="main.html?root=PF-player_ip_logger" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                                PF-player_ip_logger
+                            </a>
+                        </li>
                     </ul>
                 </div>
                 
@@ -75,6 +80,11 @@
                         <li>
                             <a href="https://github.com/PF-plugins/PF-webui" target="_blank" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
                                 <i class="fab fa-github mr-1"></i> PF-webui
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/PF-plugins/PF-player_ip_logger" target="_blank" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                                <i class="fab fa-github mr-1"></i> PF-player_ip_logger
                             </a>
                         </li>
                     </ul>
