--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
                 <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-3">PF-cq-api</h3>
                 <p class="text-gray-600 dark:text-gray-300">MCDR的QQ机器人API插件，支持OneBot协议的正向WebSocketQQ。</p>
             </div>
+
+            <!-- 特性4 -->
+            <div class="geometric-shape bg-white dark:bg-gray-800 p-6 flex flex-col items-center text-center">
+                <div class="w-16 h-16 bg-purple-100 dark:bg-purple-900 rounded-full flex items-center justify-center mb-4">
+                    <i class="fas fa-code text-purple-500 text-2xl"></i>
+                </div>
+                <h3 class="text-xl font-bold text-gray-800 dark:text-white mb-3">PF-player_ip_logger</h3>
+                <p class="text-gray-600 dark:text-gray-300">MCDR的IP记录插件，记录玩家IP地址，并提供API接口。</p>
+            </div>
+            
         </div>
     </main>
     
