更新EasyDocument版本到v1.2.7

--- a/data/PF-webui/参考图片.html
+++ b/data/PF-webui/参考图片.html
@@ -8,35 +8,35 @@
         <h2>v1.0.0-beta.1</h2>
         <div class="image-grid">
             <div class="image-card">
-                <img src="src\webui参考图片\1.0.0-beta.1\1.png">
+                <img src="\src\webui参考图片\1.0.0-beta.1\1.png">
                 <p>终端</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.0.0-beta.1\2.png">
+                <img src="\src\webui参考图片\1.0.0-beta.1\2.png">
                 <p>首页</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.0.0-beta.1\3.png">
+                <img src="\src\webui参考图片\1.0.0-beta.1\3.png">
                 <p>GUGUbot配置页</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.0.0-beta.1\4.png">
+                <img src="\src\webui参考图片\1.0.0-beta.1\4.png">
                 <p>CQ-QQ-API配置页</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.0.0-beta.1\5.png">
+                <img src="\src\webui参考图片\1.0.0-beta.1\5.png">
                 <p>MC服务器配置页</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.0.0-beta.1\6.png">
+                <img src="\src\webui参考图片\1.0.0-beta.1\6.png">
                 <p>所以插件-1</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.0.0-beta.1\7.png">
+                <img src="\src\webui参考图片\1.0.0-beta.1\7.png">
                 <p>所以插件-2</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.0.0-beta.1\8.png">
+                <img src="\src\webui参考图片\1.0.0-beta.1\8.png">
                 <p>关于&贡献</p>
             </div>
         </div>
@@ -46,51 +46,51 @@
         <h2>v1.3.8</h2>
         <div class="image-grid">
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\1.png">
+                <img src="\src\webui参考图片\1.3.8\1.png">
                 <p>登录页</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\2.png">
+                <img src="\src\webui参考图片\1.3.8\2.png">
                 <p>仪表盘</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\3.png">
+                <img src="\src\webui参考图片\1.3.8\3.png">
                 <p>MCDR配置</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\4.png">
+                <img src="\src\webui参考图片\1.3.8\4.png">
                 <p>MC服务器配置</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\5.png">
+                <img src="\src\webui参考图片\1.3.8\5.png">
                 <p>本地插件</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\6.png">
+                <img src="\src\webui参考图片\1.3.8\6.png">
                 <p>插件配置</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\7.png">
+                <img src="\src\webui参考图片\1.3.8\7.png">
                 <p>插件仓库</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\8.png">
+                <img src="\src\webui参考图片\1.3.8\8.png">
                 <p>插件安装</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\9.png">
+                <img src="\src\webui参考图片\1.3.8\9.png">
                 <p>终端</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\10.png">
+                <img src="\src\webui参考图片\1.3.8\10.png">
                 <p>AI分析</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\11.png">
+                <img src="\src\webui参考图片\1.3.8\11.png">
                 <p>设置</p>
             </div>
             <div class="image-card">
-                <img src="src\webui参考图片\1.3.8\12.png">
+                <img src="\src\webui参考图片\1.3.8\12.png">
                 <p>浅色模式</p>
             </div>
         </div>
