--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <p class="text-lg text-gray-500 dark:text-gray-400 mb-10 max-w-2xl mx-auto" id="home-description">
                 提供丰富的MCDR插件，助力Minecraft服务器管理
             </p>
-            <a href="main.html" class="inline-block bg-primary hover:bg-primary text-white font-semibold py-3 px-8 rounded-lg shadow-lg transition-all duration-300 transform hover:scale-105">
+            <a href="main" class="inline-block bg-primary hover:bg-primary text-white font-semibold py-3 px-8 rounded-lg shadow-lg transition-all duration-300 transform hover:scale-105">
                 开始使用
                 <i class="fas fa-arrow-right ml-2"></i>
             </a>
