修复底栏链接

--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
             <!-- 版权信息 -->
             <div class="mb-6 md:mb-0">
                 <div class="flex items-center space-x-2 mb-3">
-                    <img src="assets/img/logo.png" alt="PF-plugins" class="site-logo h-8 w-8" onerror="this.src='data:image/svg+xml;charset=utf-8,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 100 100\'%3E%3Crect width=\'100\' height=\'100\' rx=\'20\' fill=\'%233b82f6\'/%3E%3Cpath d=\'M30 40 L70 40 M30 50 L60 50 M30 60 L50 60\' stroke=\'%23fff\' stroke-width=\'8\' stroke-linecap=\'round\'/%3E%3C/svg%3E'">
+                    <img src="/assets/img/logo.png" alt="PF-plugins" class="site-logo h-8 w-8" onerror="this.src='data:image/svg+xml;charset=utf-8,%3Csvg xmlns=\'http://www.w3.org/2000/svg\' viewBox=\'0 0 100 100\'%3E%3Crect width=\'100\' height=\'100\' rx=\'20\' fill=\'%233b82f6\'/%3E%3Cpath d=\'M30 40 L70 40 M30 50 L60 50 M30 60 L50 60\' stroke=\'%23fff\' stroke-width=\'8\' stroke-linecap=\'round\'/%3E%3C/svg%3E'">
                     <span class="text-lg font-bold text-gray-800 dark:text-white">
                         <span class="text-primary">PF</span>-plugins
                     </span>
@@ -19,22 +19,22 @@
                     <h3 class="text-sm font-semibold text-gray-800 dark:text-white tracking-wider uppercase mb-4">插件列表</h3>
                     <ul class="space-y-3">
                         <li>
-                            <a href="main.html?root=PF-gugubot" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                            <a href="/main/#PF-gugubot" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
                                 PF-gugubot
                             </a>
                         </li>
                         <li>
-                            <a href="main.html?root=PF-cq-api" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                            <a href="/main/#PF-cq-api" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
                                 PF-cq-api
                             </a>
                         </li>
                         <li>
-                            <a href="main.html?root=PF-webui" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                            <a href="/main/#PF-webui" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
                                 PF-webui
                             </a>
                         </li>
                         <li>
-                            <a href="main.html?root=PF-player_ip_logger" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                            <a href="/main/#PF-player_ip_logger" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
                                 PF-player_ip_logger
                             </a>
                         </li>
@@ -46,17 +46,17 @@
                     <h3 class="text-sm font-semibold text-gray-800 dark:text-white tracking-wider uppercase mb-4">导航</h3>
                     <ul class="space-y-3">
                         <li>
-                            <a href="index.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                            <a href="/index.html" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
                                 首页
                             </a>
                         </li>
                         <li>
-                            <a href="main.html?root=常见问题" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                            <a href="/main/#常见问题" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
                                 常见问题
                             </a>
                         </li>
                         <li>
-                            <a href="main.html?root=支持与反馈" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
+                            <a href="/main/#支持与反馈" class="text-gray-600 dark:text-gray-300 hover:text-primary dark:hover:text-primary transition-colors">
                                 支持与反馈
                             </a>
                         </li>
