--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>重定向</title>
+    <title>PF系列插件文档</title>
 </head>
 <body>
     <script>
