--- a/footer.html
+++ b/footer.html
@@ -99,7 +99,7 @@
             </p>
             
             <div class="flex space-x-6">
-                <a href="https://github.com/PF-plugins" target="_blank" class="text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300">
+                <a href="https://github.com/LoosePrince/PF-doc" target="_blank" class="text-gray-500 dark:text-gray-400 hover:text-gray-700 dark:hover:text-gray-300">
                     <i class="fab fa-github text-xl"></i>
                 </a>
             </div>
