新增 MCDR MCP Service 插件文档，更新 README 说明，修正插件版本支持信息

--- a/index.html
+++ b/index.html
@@ -209,6 +209,18 @@
                     <span class="inline-block bg-pink-100 dark:bg-pink-900 text-pink-600 dark:text-pink-300 text-xs px-2 py-1 rounded">物品展示</span>
                 </div>
 
+                <!-- MCDR MCP Service -->
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 p-4 border border-gray-200 dark:border-gray-700">
+                    <div class="flex items-center mb-3">
+                        <div class="w-10 h-10 bg-cyan-100 dark:bg-cyan-900 rounded-lg flex items-center justify-center mr-3">
+                            <i class="fas fa-robot text-cyan-500 text-lg"></i>
+                        </div>
+                        <h3 class="font-semibold text-gray-800 dark:text-white text-sm">MCDR MCP Service</h3>
+                    </div>
+                    <p class="text-xs text-gray-600 dark:text-gray-300 mb-3">为MCDR提供MCP服务接口，让AI管理服务器</p>
+                    <span class="inline-block bg-cyan-100 dark:bg-cyan-900 text-cyan-600 dark:text-cyan-300 text-xs px-2 py-1 rounded">AI管理</span>
+                </div>
+
                 <!-- PF-CoolQAPI (已废弃) -->
                 <div class="bg-white dark:bg-gray-800 rounded-lg shadow-md hover:shadow-lg transition-all duration-300 p-4 border border-gray-200 dark:border-gray-700 opacity-75">
                     <div class="flex items-center mb-3">
